second row designed & overflow fixed!

--- a/Style/style.css
+++ b/Style/style.css
@@ -60,7 +60,7 @@ h4 {
 /* banner seciton */
 .banner {
   background-color: #7b62e9;
-  width: 100vw;
+  width: 100%;
   padding: 30px 0;
   border-top-right-radius: 45px;
   border-top-left-radius: 45px;
@@ -111,7 +111,7 @@ h4 {
 .infoBar {
   display: flex;
   flex: 1;
-  width: 100vw;
+  width: 100%;
   background-color: #43b6fa;
   flex-wrap: nowrap;
   justify-content: space-evenly;
@@ -145,6 +145,7 @@ h4 {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  overflow: none;
 }
 .logoTitle {
   padding: 15px 0;
@@ -154,7 +155,8 @@ h4 {
 }
 /* row section */
 .row {
-  margin-bottom: 20px;
+  
+  margin-bottom: 35px;
   display: flex;
   justify-content: space-around;
 }
